hadra-lang/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0011.hl
Object hello=null;
int i=hello;